migrated to require.js framework

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	
-	<!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
 
-    <title>Mockup</title>
+  	
+  <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+		<script data-main="js/main.js" src="js/require.js"></script>
 	
-    <script src="js/d3.min.js"></script>
+    <title>GraphView</title>
+	
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
@@ -69,8 +70,4 @@
 		</div>
 	</div>
 </body>
-<script src="js/jquery-3.3.1.slim.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="main.js"></script>
 </html>
