--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
     <title>GraphView</title>
 	
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 	<div class="container-fluid text-center">    
