--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  	
+
   <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-		<script data-main="js/main.js" src="js/require.js"></script>
-	
+		<script data-main="js/main?noext" src="js/require"></script>
+
     <title>GraphView</title>
-	
+
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<div class="container-fluid text-center">    
+	<div class="container-fluid text-center">
 		<div class="row content">
 			<div class="col-sm-9 text-left">
 				<svg width="1000" height="1000"></svg>
@@ -43,7 +43,7 @@
 						  </div>
 						  <select class="custom-select" id="typeselect"></select>
 						</div>
-						<h5 class="text-left">Attributes:   
+						<h5 class="text-left">Attributes:
 							<button type="button" class="btn btn-secondary" id="addattr">New</button>
 						</h5>
 						<ul class="list-group" id="attrs"></ul>
