--- a/viewer.html
+++ b/viewer.html
@@ -8,7 +8,7 @@
 
   <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-		<script data-main="js/main_viewer.js" src="js/require.js"></script>
+		<script data-main="js/main_viewer?noext" src="js/require"></script>
 
     <title>GraphView</title>
 
